      @TURN command would be lost because of a pointer being reused.
   -- Modified TURN/ENDTURN processing to cope with arbitrarily deep
      TURN and FORM nesting, and cleaned up the error handling.
   -- Moved the correlation between faction points and what they give
      you from being hardcoded in extra.cpp to an array in rules.cpp.
   -- Small fix so that all items (even non-give) can actually be discarded.
   -- Added check that there is actually an active unit when parsing TURN
      and ENDTURN orders.  Fixes segfault.
   -- Fixed bugs in orders checker where it was trying to do a
      unit->Error() where it should have been doing ParseError() since
      unit isn't valid in the orders checker.
   -- Applied patch from Jan Rietema <ravanrooke@yahoo.de> providing a large
      amount more configurability in the world generation process.
   -- Changed template generation to understand the terrain types again
      after the previous fix.
   -- Added gamedefs to control the minimum and maximum amounts of food
      that a unit requires for maintenance, and the value of food for
      maintenance.
   -- Added a processed food item (FOOD), cooking skill and Create Food
      spell to go with the possibility of requiring food for upkeep.
      Made food buyable in all town markets.
   -- Made it so that shield items didn't need to be PREPARED in a game with
      USE_PREPARE_COMMAND set and verified that non-prepared items got
	  returned.
   -- Fixed display of hits/regen to show unit number and creature in unit
      which took the damage.
   -- Fixed bug in magic studying in protected buildings under LIMITED_MAGES
      case as reported by Vitauts Stochka <vit@dau.lv>
   -- Fixed empty object bug reported by Vitauts Stochka <vit@dau.lv>
   -- Added unit weight/capacity patch from Ales Privetivy <ales@ucw.cz>
   -- Added patch from Jan Rietema <ravanrooke@yahoo.de> to conditionally
      prevent ships from sailing through single-hex land-masses.